@@ -51,6 +51,7 @@ Holds a list of all the leases found after reading the leases file.
 has leases => (
     is => 'ro',
     isa => 'ArrayRef',
+    auto_deref => 1,
     default => sub { [] },
 );
 
